webhook/manifests/webhook.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-webhook
  name: demo-webhook
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 30100
  selector:
    app: demo-webhook
