webhook/manifests/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook.demo.local
webhooks:
  - name: demo-webhook.demo.local
    namespaceSelector:
      matchLabels:
        demo-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: demo-webhook
        path: /mutate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lVVFVxV0cxM2hxeG90c3cyUHNOQTNyV0p1bFJrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pERUxNQWtHQTFVRUJoTUNWVUV4RlRBVEJnTlZCQU1NREdSbGJXOHRkMlZpYUc5dmF6QWVGdzB5TXpBMwpNRGN5TVRJMU1EVmFGdzB5TkRBM01EWXlNVEkxTURWYU1DUXhDekFKQmdOVkJBWVRBbFZCTVJVd0V3WURWUVFECkRBeGtaVzF2TFhkbFltaHZiMnN3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREYKclZDR2RNclRGanJYOUVONERhaTl4KzZEa1l6SmQzYlBTc1l6dzdvbUducS8zNzUxRG1OWFBibU5kaWVPWkRzSQp6QnhZSFFmY1do [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
