webhook/manifests/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: demo-webhook.demo.local
webhooks:
  - name: demo-webhook.demo.local
    namespaceSelector:
      matchLabels:
        demo-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: demo-webhook
        path: /validate
        port: 443
      caBundle: |-
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lVRTU2VmZKcHZ2MUhSbzJEbHZuOTAvZ1BYS3N3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pERUxNQWtHQTFVRUJoTUNWVUV4RlRBVEJnTlZCQU1NREdSbGJXOHRkMlZpYUc5dmF6QWVGdzB5TXpBMwpNREV4TVRFMk1qSmFGdzB5TkRBMk16QXhNVEUyTWpKYU1DUXhDekFKQmdOVkJBWVRBbFZCTVJVd0V3WURWUVFECkRBeGtaVzF2TFhkbFltaHZiMnN3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzEKS3lLSWJ2UmZnZldNNDUydkt0Z2NSbHQxMC80ZWl6Uk80YjdHSjZudDg5L1IzSUZsVVJNdVk0OVJ1K3c4VXVDcwo0c3MzOGFHdCszcDhFQXlM [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
